--- a/assets/css/portfolio-page/portfolio.css
+++ b/assets/css/portfolio-page/portfolio.css
@@ -3,8 +3,10 @@ body {
 }
 
 .header {
-  height: 20vh;
+  height: 10vh;
   width: 100%;
+  position: fixed;
+
   display: flex;
   align-items: center;
   background: #9148dd;
@@ -19,8 +21,9 @@ body {
   display: flex;
   justify-content: space-between;
 }
-main {
+.main-container {
   width: 100%;
+  padding: 3rem 0 0 0;
 }
 .portfolio-page-block {
   width: 100%;
@@ -179,6 +182,7 @@ ol {
   flex-direction: column;
   justify-content: center;
   font-size: 2rem;
+  text-align: center;
   border-radius: 1rem;
   -webkit-border-radius: 1rem;
   -moz-border-radius: 1rem;
@@ -187,7 +191,7 @@ ol {
 }
 .grid-item p {
   margin: 0;
-  padding: 0;
+  padding: 0.5rem;
 }
 .grid-item:nth-of-type(1) {
   background: linear-gradient(#ff9a9e, #fad0c4);
@@ -196,38 +200,40 @@ ol {
   background: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
 }
 .grid-item:nth-of-type(3) {
-  background: linear-gradient(130deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
-
+  background: linear-gradient(
+    130deg,
+    rgba(34, 193, 195, 1) 0%,
+    rgba(253, 187, 45, 1) 100%
+  );
 }
-.project-preview-container{
+.project-preview-container {
   display: flex;
-  flex-direction:column;
+  flex-direction: column;
   justify-content: center;
   text-align: center;
   margin-top: 2rem;
-} 
+}
 
 .project-preview-container a {
   text-decoration: none;
   font-size: 1.5rem;
   color: #000;
 }
-.project-preview-container a:hover{
-  color:rgb(99, 98, 98)
+.project-preview-container a:hover {
+  color: rgb(99, 98, 98);
 }
-.project-preview-container a img{
+.project-preview-container a img {
   border-radius: 50%;
-  transition: .5s ease;
-  -webkit-transition: .5s ease;
-  -moz-transition: .5s ease;
-  -ms-transition: .5s ease;
-  -o-transition: .5s ease;
+  transition: 0.5s ease;
+  -webkit-transition: 0.5s ease;
+  -moz-transition: 0.5s ease;
+  -ms-transition: 0.5s ease;
+  -o-transition: 0.5s ease;
 }
-.project-preview-container a img:hover{
-  box-shadow: rgb(143, 142, 142) 5px 5px 5px ;
+.project-preview-container a img:hover {
+  box-shadow: rgb(143, 142, 142) 5px 5px 5px;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
 }
-
