--- a/assets/css/header/header.css
+++ b/assets/css/header/header.css
@@ -3,7 +3,7 @@
 }
 
 .header {
-  width: 100%;
+  width: 10vh;
   background: transparent;
 }
 
@@ -185,21 +185,11 @@
   width: 80%;
 }
 
-.scrolled {
+.scroll {
+  background: #9e52db;
+  height: 5vh;
   position: fixed;
   top: 0;
-  left: 0;
-  width: 100%;
-  background: #3D017A;
-  height: 15vh;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  transition: 1s ease;
-  -webkit-transition: 1s ease;
-  -moz-transition: 1s ease;
-  -ms-transition: 1s ease;
-  -o-transition: 1s ease;
 }
 
 .nav-active {
