--- a/assets/css/header/header.scss
+++ b/assets/css/header/header.scss
@@ -4,7 +4,7 @@
   max-height: 60vh;
 }
 .header{
-  width: 100%;
+  width: 10vh;
   background: transparent;
 }
 .header-wrapper{
@@ -121,12 +121,15 @@
 }
 .line1{
   margin: 7px 0;
+
 }
 .line2{
   margin: 7px 0;
+ 
 }
 .line3{
   margin: 7px 0;
+ 
 }
 .toggle .line1 {
   background: #941F52;
@@ -162,19 +165,11 @@
   width: 80%;
 }
   
-.scrolled{
+.scroll{
+  background: #9e52db;
+  height: 5vh;
   position: fixed;
   top: 0;
-  left: 0;
-  width: 100%;
-  background: #3D017A;
-  height: 15vh;
-  align-items: center;
-  transition: 1s ease;
-  -webkit-transition: 1s ease;
-  -moz-transition: 1s ease;
-  -ms-transition: 1s ease;
-  -o-transition: 1s ease;
 }
 .nav-active{
   width: 80% !important;
