--- a/assets/css/media-queries/mediaQueries.css
+++ b/assets/css/media-queries/mediaQueries.css
@@ -67,7 +67,7 @@
   .burger {
     display: block;
     position: fixed;
-    top: 7%;
+    top: 10%;
     right: 10%;
     height: 40px;
   }
@@ -107,6 +107,9 @@
   }
   .background-image {
     display: none;
+  }
+  .portfolio-block a {
+    opacity: 1;
   }
 }
 /*# sourceMappingURL=mediaQueries.css.map */
