--- a/assets/css/media-queries/mediaQueries.scss
+++ b/assets/css/media-queries/mediaQueries.scss
@@ -60,7 +60,7 @@
   .burger {
     display: block;
     position: fixed;
-    top: 7%;
+    top: 10%;
     right: 10%;
     height: 40px;
   }
@@ -116,5 +116,8 @@
   }
   .background-image {
     display: none;
+  }
+  .portfolio-block a{
+    opacity: 1;
   }
 }
